# ComfyUI-Qwen3TTS-XPU

./: .gitignore  PROJECT_SUMMARY.md  README.md  README_CN.md  README_EN.md  __init__.py  nodes.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
docs/: openvino_value_analysis.md
qwen_tts/core/models/: modeling_qwen3_tts.py
qwen_tts/core/tokenizer_12hz/: modeling_qwen3_tts_tokenizer_v2.py
qwen_tts/core/tokenizer_25hz/: modeling_qwen3_tts_tokenizer_v1.py
qwen_tts/inference/: qwen3_tts_model.py
