[project]
name = "comfyui-simple-qwen3-tts"
description = "High-quality Text-to-Speech nodes for ComfyUI using Qwen3-TTS models. Supports voice cloning, voice design, and custom voices with Intel Arc XPU optimization."
version = "1.2.5"
requires-python = ">=3.9"
license = { file = "LICENSE" }
dependencies = []

[project.urls]
Repository = "https://github.com/allanmeng/ComfyUI-Qwen3TTS-XPU"

[tool.comfy]
PublisherId = "allanmeng"
DisplayName = "Qwen3-TTS XPU"
Icon = ""
